docs: fix color contrast

--- a/packages/docs/src/global.css
+++ b/packages/docs/src/global.css
@@ -114,9 +114,11 @@ pre[class*='language-'] {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --bg-color: #2c2c2c;
+    --qwik-blue: #009dfd;
+
+    --bg-color: #2a2a2a;
     --bg-secondary-color: #232323;
-    --bg-header-color: #ffffff08;
+    --bg-header-color: #ffffff06;
     --text-color: #e3e2e9;
     --secondary-text-color: #ffffffc3;
     --interactive-text-color: var(--qwik-blue);
